Swiper overflow fix

--- a/components/Doctors/Doctors.module.scss
+++ b/components/Doctors/Doctors.module.scss
@@ -3,7 +3,6 @@
 }
 
 .docSlider {
-  overflow: visible !important;
   width: 100%;
   @media (max-width: 768px) {
     max-width: 300px;
@@ -19,6 +18,10 @@
     max-width: 300px;
     margin: 0 auto;
     background: #fff;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     .preview {
       max-height: 250px;
       position: relative;
@@ -102,8 +105,8 @@
       }
     }
     &:hover {
-      transform: scale(1.05);
-      box-shadow: 0 10px 10px #d6d6d6;
+      transform: scale(0.95);
+      box-shadow: 0 6px 6px #d6d6d6;
       button {
         background: var(--dent-blue);
       }
